# RustyCoin

./: Cargo.toml  README.md
src/: client.rs  client_2.rs  main.rs  node.rs  server.rs  server_exemple.rs
src/messages/: <  address.rs  header.rs  mod.rs  states.rs  var_str.rs  var_uint.rs  variables.rs  whoami.rs
src/server/: <  create.rs  logic.rs  mod.rs
