[package]
name = "rustycoin"
version = "0.1.0"
authors = ["Futurne <pstmrtem@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = {version = "0.7", features = ["os-poll", "tcp"]}

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"
